--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="login">Login</string>
     <string name="register">New Register</string>
 
+    <string name="title_have_space">Have Space</string>
+    <string name="message_have_spave">Please Fill All Every Blank</string>
+
+
 </resources>
